--- a/meditate/assets/main.css
+++ b/meditate/assets/main.css
@@ -12,8 +12,14 @@
 
 
 body {
-  font-family: arial;
+  font-family: monospace;
+  border-style: solid;
+  border-width: 10px;
+  border-color: white;
+
 }
+
+
 
 .container {
   display: flex;
